--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="nav_calendar_title">calendar</string>
     <string name="nav_profile_title">profile</string>
     <string name="nav_friends_title">firends</string>
+    <string name="internet_connection_error_message">Check your internet connection</string>
 </resources>
