--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -45,4 +45,5 @@
     <string name="nav_profile_title">профиль</string>
     <string name="nav_friends_title">друзья</string>
     <string name="internet_connection_error_message">Проверьте своё интернет соеденение</string>
+    <string name="reg_btn">регистрация</string>
 </resources>
