--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="nav_profile_title">profile</string>
     <string name="nav_friends_title">firends</string>
     <string name="internet_connection_error_message">Check your internet connection</string>
+    <string name="reg_btn">registration</string>
 </resources>
